# iLab2nd

task01/: .gitignore  CMakeLists.txt  ideal_cache_chatGPT.py  notes.diff  readme.md  testcomp.py  testgen.py
task01/reference_tests/: test1.in  test1.out  test10.in  test10.out  test2.in  test3.in  test3.out  test4.in  test4.out  test5.in  test5.out  test6.in  test6.out  test7.in  test8.in  test8.out  test9.in
task01/src/: arc.cpp  belady.cpp  main.cpp
task01/src/ARC/: CMakeLists.txt
task01/src/ARC/src/: arc.cpp  arc.hpp
task01/src/Belady/: CMakeLists.txt
task01/src/Belady/src/: belady.hpp
